Adding images as practice

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+  src="../images/my_company_logo.png"
+  alt="my company name"
+  title="We're here to help you!"
+/>
+<img
+  src="../images/my_company_logo.png"
+  alt="my company name"
+  title="We're here to help you!"
+/>
+<img
+  src="../images/my_company_logo.png"
+  alt="my company name"
+  title="We're here to help you!"
+/>
   </body>
 </html>
